# bank-customer-churn-mlops

./: .dockerignore  .gitignore  Dockerfile  README.md  mlflow.db  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: main.py  predictor.py  schemas.py
api/routers/: health.py  predict.py
api/utils/: logger.py
data/: raw.dvc
models/: xgboost.joblib
notebooks/: 01_data_understanding.ipynb  02_eda.ipynb  03_model_experiments.ipynb
reports/reports/: model_comparison.csv  model_comparison.md  model_selection_report.md
src/: test_loader.py  test_preprocessing.py
src/config/: config.py
src/data/: analyze_surname.py  loader.py  preprocessing.py
src/models/: evaluate.py  registry.py  train.py  tuning.py
src/pipelines/: model_pipeline.py  preprocessing_pipeline.py
src/utils/: mlflow_logger.py  report.py
tests/: test_health.py  test_invalid_input.py  test_predict.py
