[project]
name = "bank-customer-churn-mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dvc-gdrive>=3.0.1",
    "dvc[gdrive]>=3.67.1",
    "fastapi>=0.138.1",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "mlflow>=3.14.0",
    "notebook>=7.6.0",
    "numpy>=2.5.0",
    "pandas>=2.3.3",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "scikit-learn>=1.9.0",
    "tabulate>=0.10.0",
    "uvicorn>=0.49.0",
    "xgboost>=3.3.0",
]
